@@ -6,7 +6,7 @@
     <ProductVersion>3.0</ProductVersion>
     <ProjectGuid>{a70f0c0c-8b35-48c9-bce4-e5f7a82ba774}</ProjectGuid>
     <SchemaVersion>2.0</SchemaVersion>
-    <OutputName>windows-5.1-beryllium_0.8.5_i386</OutputName>
+    <OutputName>windows-5.1-beryllium_0.8.6_i386</OutputName>
     <OutputType>Package</OutputType>
     <WixTargetsPath Condition=" '$(WixTargetsPath)' == '' ">$(MSBuildExtensionsPath)\Microsoft\WiX\v3.x\Wix.targets</WixTargetsPath>
   </PropertyGroup>
